# proton-oracle

./: README.md  create_oracle.json
atom/: CMakeLists.txt  atom.abi  atom.wasm  commands.sh  commands_create_account.sh  commands_resources.sh
atom/include/atom/: atom.hpp  constants.hpp  tables.hpp
atom/ricardian/: atom.contracts.md
atom/src/: aggregate.cpp  atom.cpp  feed_manager.cpp  feed_msig.cpp  feed_provider.cpp
frontend/: package.json
helpers/: createOracle.ts  create_oracle.json  oracles.ts  package-lock.json  package.json  tsconfig.json
helpers/src/: createOracle.ts  oracles.ts  permissions.ts
js_tests/: package-lock.json  package.json
js_tests/tests/: proton-tests.js
